--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 /* Main global style */
-
+@import "_vars.css";
 @layers buttons,components, demo, reset;
 
 @layer reset {
@@ -18,15 +18,7 @@
 }
 
 @layer demo {
-  :root {
-    --color-dark: #073642;
-    --color-darkish: #586e75;
-    --color-light: #eee8d5;
-    --color-lightish: #fdf6e3;
-    --color-accent: #2aa198;
-    --color-error: #dc322f;
-    --measure: 65ch;
-  }
+
   html {
     background-color: var(--color-light);
   }
