--- a/assets/css/_layout-b-flex.css
+++ b/assets/css/_layout-b-flex.css
@@ -2,6 +2,7 @@
  Layout b 
  display flex
  author: Viensay
+ mobile first
 */
 
 .container {
@@ -13,8 +14,16 @@
 
   div {
     background-color: grey;
-    width: 25%;
     height: 30vh;
+  }
+}
+
+.container {
+  div:nth-child(1) {
+    width: auto;
+  }
+  div {
+    flex-basis: 25%;
   }
 }
 
@@ -26,13 +35,3 @@
   }
 }
 
-@media screen and (max-width: 900px) {
-  .container {
-    div:nth-child(1) {
-      width: 85%;
-    }
-    div {
-      width: 25%;
-    }
-  }
-}
